# Strata

./: .gitignore  .mcp.json  CONTEXT.md  LICENSE  Makefile  README.md  conftest.py  fleet.example.yaml  fleet.yaml  pyproject.toml
.claude/: settings.example.json
.claude/skills/architect/: Skill.md
.claude/skills/marketing-skill/: SKILL.md
.claude/skills/session-handoff/: Skill.md
.claude/skills/strata/: Skill.md
.claude/skills/strata-architect/: Skill.md
.claude/skills/strata-ceo/: Skill.md
.claude/skills/strata-developer/: Skill.md
.claude/skills/strata-inspect/: Skill.md
.claude/skills/strata-worker/: Skill.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: ROADMAP.md  philosophy.md
docs/adr/: 0001-v1-architecture.md  0002-fleet-config-source-of-truth.md  0003-strata-launch-cc-binding.md  0004-h2-foundations.md  0005-brownfield-install.md  0006-entitlement.md  0007-publication-mechanism.md  0008-operator-stratum-mechanism.md  0009-packaging-engine-client-split.md
docs/plans/: 2026-07-10-implementation-plan.md
mcp_server/: __init__.py  __main__.py  strata_mcp.py
migrations/: 0001_initial.sql  0002_drop_fleet_tables.sql
scripts/: bootstrap_fleet.py  run_migrations.py
src/strata/: __init__.py  __main__.py  app.py  bootstrap.py  fleet_config.py  fleet_export.py  freshness.py  install.py  launch.py  locks.py  migrator.py  operator.py  perspective.py  preflight.py  project_config.py  publication.py  record_store.py  scope_manager.py  session_state.py  settings.py  stores.py  summary_store.py
src/strata/_hooks/: strata-stop-hook
src/strata/_migrations/: 0003_judgment_attempts.sql  0004_operator.sql  0005_publication.sql  0006_optional_skill.sql
src/strata/_skills/strata/: Skill.md
src/strata/_skills/strata-inspect/: Skill.md
src/strata/_skills/strata-worker/: Skill.md
src/strata/_templates/: dev-team.yaml  minimal.yaml  research-group.yaml
src/strata/_ui/: app.jsx  atlas.css  atoms.jsx  graph.jsx  index.html  scope-detail.jsx  settings.jsx  store.js
src/strata/mcp/: __init__.py  server.py
templates/: dev-team.yaml  minimal.yaml  support-org.yaml
tests/: test_app.py  test_app_ui.py  test_bootstrap.py  test_cli.py  test_contribute_choke_point.py  test_e2e_smoke.py  test_fleet_config.py  test_fleet_export.py  test_freshness.py  test_freshness_install.py  test_launch.py  test_manager_refresh.py  test_mcp_server.py  test_migrator.py  test_operator.py  test_packaging.py  test_perspective.py  test_preflight.py  test_project_config.py  test_publication.py  test_record_store.py  test_refuse_to_start.py  test_register.py  test_scope_manager.py  test_session_state.py  test_skills_package_data.py  test_smoke.py  test_start_guard.py  test_summary_store.py  test_ui_package_data.py  test_unregister.py  test_v1_3_1_hardening.py
ui/: app.jsx  atoms.jsx
