[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strata"
version = "0.0.1"
description = "Shared memory for agent fleets."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "anthropic",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "SIM108",  # ternary operator — readability preference
]
