[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strata"
version = "0.0.1"
description = "Shared memory for agent fleets."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "anthropic",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "httpx",
    "mcp",
]

[project.scripts]
strata = "strata.__main__:main"
strata-mcp = "strata.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strata"]
include = [
    "src/strata/_skills/**/*",
    "src/strata/_migrations/**/*",
    "src/strata/_templates/**/*",
    "src/strata/_ui/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit external services (e.g. real Anthropic API). Skipped unless STRATA_RUN_INTEGRATION=1.",
    "slow: slow tests (e.g. --bootstrap-venv requires network). Skipped unless STRATA_RUN_BOOTSTRAP_VENV=1.",
    "ctrlc: Windows live Ctrl-C launch test (needs a real console). Skipped unless STRATA_RUN_CTRLC=1.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "SIM108",  # ternary operator — readability preference
    "B008",    # Depends() in function defaults is the standard FastAPI pattern
]
