[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memfleet"
version = "1.5.0"
description = "Shared memory for agent fleets."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "anthropic",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "mcp",
]

[project.scripts]
strata = "strata.__main__:main"
strata-mcp = "strata.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    # httpx: no longer a runtime dependency (issue #64 — the CLI inspection
    # commands were ported to embedded store reads, dropping the last src/
    # consumer). Kept for tests only: FastAPI's starlette.testclient.TestClient
    # requires it importable.
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strata"]
include = [
    "src/strata/_skills/**/*",
    "src/strata/_migrations/**/*",
    "src/strata/_templates/**/*",
    "src/strata/_ui/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit external services (e.g. real Anthropic API). Skipped unless STRATA_RUN_INTEGRATION=1.",
    "slow: slow tests (e.g. --bootstrap-venv requires network). Skipped unless STRATA_RUN_BOOTSTRAP_VENV=1.",
    "ctrlc: Windows live Ctrl-C launch test (needs a real console). Skipped unless STRATA_RUN_CTRLC=1.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "SIM108",  # ternary operator — readability preference
    "B008",    # Depends() in function defaults is the standard FastAPI pattern
]
